# MAI-lab-OS

./: README.md
lab1/: CMakeLists.txt  child.cpp  parent.cpp
lab2/: main.cpp
